--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,25 @@
 {
   "compilerOptions": {
-  "target": "es2018",
-  "lib": ["es5", "es6", "ES2018"],
-  "experimentalDecorators": true, 
-  "emitDecoratorMetadata": true,
-  "module": "commonjs",
-  "moduleResolution": "node",
-  "resolveJsonModule": true,
-  "allowJs": true,
-  "outDir": "./dist",
-  "rootDir": "./src",
-  "esModuleInterop": true,
-  "forceConsistentCasingInFileNames": true,
-  "strict": true,
-  "noImplicitAny": true,
-  "strictPropertyInitialization": false
-},
-"include": ["src/*/", "src/database/datasourse.ts"],
-"exclude": ["node_modules", "dist"],
-"ts-node": {
-  "files": true
-}
+    "target": "es2018",
+    "lib": ["es5", "es6", "ES2018"],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictPropertyInitialization": false,
+    "typeRoots": ["@types", "./node_modules/@types"]
+  },
+  "include": ["src/*/", "src/database/datasourse.ts", "src/@types/express/index.d.ts"],
+  "exclude": ["node_modules", "dist"],
+  "ts-node": {
+    "files": true
+  }
 }
