--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/jest": "^29.0.0",
+        "@types/mocha": "^10.0.2",
         "@types/node": "^18.7.18",
         "@types/supertest": "^2.0.12",
         "@types/validator": "^13.7.6",
@@ -34,6 +35,7 @@
         "supertest": "^6.2.4",
         "ts-jest": "^28.0.8",
         "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^4.8.3"
     },
     "dependencies": {
