--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,11 @@
     "strict": true,
     "noImplicitAny": true,
     "strictPropertyInitialization": false,
-    "typeRoots": ["@types", "./node_modules/@types"]
+    "typeRoots": ["@types", "./node_modules/@types"],
+    "types": ["node", "jest"]
   },
-  "include": ["src/*/", "src/database/datasourse.ts", "src/@types/express/index.d.ts"],
+  "typeAcquisition": { "include": ["jest"] },
+  "include": ["src/**/*.ts", "src/datasourse.ts", "@types/express/index.d.ts"],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
     "files": true
